syntax = "proto3";

option java_package = "com.globalways.user";

package proto;

import "common.proto";
import "user.common.proto";

service UserAppService {
    // ping
    rpc Ping(NullRpcRequest) returns (Response) {}

    // 修改密码 (http url: /users/password/change [post])
    rpc ChangePassword(ChangePasswordParam) returns (Response) {}
    // 忘记密码 (http url: /users/password/forget [post])
    rpc ForgetPassword(ForgetPasswordParam) returns (Response) {}
    // 更换头像 (http url: /users/avatar/change [post])
    rpc ChangeUserAvatar(ChangeUserAvatarParam) returns (Response) {}
    // 更改昵称 (http url: /users/nick/change [post])
    rpc ChangeUserNick(ChangeUserNickParam) returns (Response) {}
    // 更改性别属性 (http url: /users/sex/change [post])
    rpc ChangeUserSex(ChangeUserSexParam) returns (Response) {}
    // 新增用户地址 (http url: /users/addrs [post])
    rpc NewUserAddr(NewUserAddrParam) returns (NewUserAddrResp) {}
    // 更新用户地址(1 or n) (http url: /users/addrs [put])
    rpc UpdateUserAddrs(UpdateUserAddrsParam) returns (Response) {}
    // 删除用户地址(1 or n) (http url: /users/addrs [delete])
    rpc DelUserAddr(DelUserAddrParam) returns (Response) {}
    // 获取用户地址(1) (http url: /users/addrs/s [get])
    rpc GetUserAddr(GetUserAddrParam) returns (GetUserAddrResp) {}

    // 获取用户 (http url: /users/s [get])
    rpc GetUser(GetUserParam) returns (GetUserResp) {}
}

message GetUserAddrParam {
    int64 addrId = 1;
}

message GetUserAddrResp {
    Response resp = 1;
    UserAddress addr = 2;
}

// 删除用户地址参数列表
message DelUserAddrParam {
    string token = 1;
    repeated int64 addrIds = 2;
}

// 更新用户地址参数列表
message UpdateUserAddrsParam {
    string token = 1;
    repeated UserAddress addrs = 2;
}

// 更新用户性别参数列表
message ChangeUserSexParam {
    string token = 1;
    UserSex sex = 2;
}

message GetUserParam {
    uint64 hongId = 1;
}

message GetUserResp {
    Response resp = 1;
    User user = 2;
}

message NewUserAddrParam {
    string token = 1;
    string name = 2;
    string contact = 3;
    string area = 4;
    string detail = 5;
}

message NewUserAddrResp {
    Response resp = 1;
    UserAddress addr = 2;
}

enum ChangePasswordType {
    CHANGE_PASSWORD = 0;
    FORGET_PASSWORD = 1;
}

// 修改密码参数
message ChangePasswordParam {
    string token = 1;
    string passwordOld = 2;
    string passwordNew = 3;
}

// 忘记密码参数
message ForgetPasswordParam {
    uint64 hongId = 1;
    string passwordNew = 2;
}

message ChangeUserAvatarParam {
    string token = 1;
    string avatar = 2;
}

message ChangeUserNickParam {
    string token = 1;
    string nick = 2;
}